<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewJobOfferActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create New Job Offer"
            android:textSize="24sp"
            android:paddingBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Enter Title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Company"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Enter Company Name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="State"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Enter State" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="City"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Enter City" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCostOfLiving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cost of Living Index"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextCostOfLiving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="Enter Cost of Living Index" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewYearlySalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yearly Salary"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextYearlySalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="Enter Yearly Salary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewYearlyBonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yearly Bonus"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextYearlyBonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="Enter Yearly Bonus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTrainingFund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Training and Development Fund"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextTrainingFund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="Enter Training Fund Amount" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLeaveTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Leave Time (days)"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextLeaveTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="Enter Leave Time in Days" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTeleworkDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Telework Days per Week"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextTeleworkDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="Enter Telework Days per Week" />
        </LinearLayout>

        <!-- Add a button at the end of the LinearLayout -->
        <Button
            android:id="@+id/save_and_return_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save and Return" />
        <Button
            android:id="@+id/save_and_create_another_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save and Create Another One" />
        <Button
            android:id="@+id/compare_with_cur_job_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save and Compare With Current Job" />
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>