<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:ems="10"
            android:inputType="text"
            android:text="Welcome to Job Offer Comparator Team 097" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" Current Job Entered" />

            <TextView
                android:id="@+id/textViewCurJobEntered"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" Number of Job Offers" />

            <TextView
                android:id="@+id/textViewNumOfJobOffers"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/update_or_create_current_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update or Create Current Job" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/create_job_offer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Job Offer" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/view_and_rank_job_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="View and Rank Jobs" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/adjust_comparison_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adjust Comparison Settings" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>